# Git-Templates

./: .all-contributorsrc  .editorconfig  CITATION.cff  COPYINGL  CREDITS.wiki  LINUX_DESKTOP.md  README.md  ROOTFILES.base
.github/: CODEOWNERS  GitHubFolderNotes_V1.md  HistoryoftheGitHubFolder_Seanpm2001_V1.md
.github/Citation/APA-Style/: README.txt
.github/Citation/BibTeX/: CITATION_V1.bib
.github/workflowArchives/: README.md
Git-Templates/: README_V1.md
Git-Templates/Authorship/channa-my/: AUTHORS.txt
Git-Templates/Authorship/chuckchuck2007/: AUTHORS
Git-Templates/Authorship/inverno4/: AUTHORS
Git-Templates/Authorship/memewallawalla/: AUTHORS
Git-Templates/BatchUploads/: BATCH_COMMITS_LIST.txt  README.md
Git-Templates/BatchUploads/1/: 1.txt
Git-Templates/BatchUploads/10/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Git-Templates/BatchUploads/11/: 1.txt  10.txt  11.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Git-Templates/BatchUploads/12/: 1.txt  10.txt  11.txt  12.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Git-Templates/BatchUploads/13/: 1.txt  10.txt  11.txt  12.txt  13.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Git-Templates/BatchUploads/14/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Git-Templates/BatchUploads/15/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Git-Templates/BatchUploads/16/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Git-Templates/BatchUploads/17/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Git-Templates/BatchUploads/18/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Git-Templates/BatchUploads/19/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Git-Templates/BatchUploads/2/: 1.txt  (+1 more)
Git-Templates/CONTRIBUTING/: CONTRIBUTING_MODERN1.md  CONTRIBUTING_SNUPROGRAMMINGTOOLS.md  ContributingPersonal.md  Contributing_Apartment.md  Meadows_CONTRIBUTING.md  SpecialNimbleBit_Contributing.md
Git-Templates/FileCreation/: IGNORE.md
Git-Templates/GamingSchedule/: GamingSchedule.md
Git-Templates/GitHubFolder/: Bug_report.md  Feature_request.md  config.yml
Git-Templates/Hidden-Files/: README.txt
Git-Templates/Licenses/: README.txt
Git-Templates/NimbleBit/: NimbleBitGames_November25th2020.txt  PROJECT_LANG.nim
Git-Templates/ProjectLanguageFiles/: README.md
Git-Templates/ProjectLanguageFiles/Education/!Learn/Learn-GN/GN/: PROJECT_LANG_1_V1.gn
Git-Templates/ProjectLanguageFiles/SNU/2D/ProgrammingTools/!/IDE/GN/GN/: PROJECT_LANG_1_V1.gn
Git-Templates/ProjectLanguageFiles/SNU/2D/ProgrammingTools/!/IDE/Meson/Meson/: meson.build
OldVersions/ROOTFILES/: ROOTFILES_V2.base
(+9042 files in other folders)
