# Start of script
# Project language file 1
print ("Project language file 1")
print ("For: seanpm2001/Learn-GN")
print ("About:")
print ("I decided to make GN the main project language file for this project (Seanpm2001/Learn-GN) as GN is the language this project is dedicated to, because this project is about learning the GN programming language. It only makes sense to GN the official language for this project. It is getting its own project language file, starting here.")

# Output:
# Project language file 1
# For: seanpm2001/Learn-GN
# About:
# I decided to make GN the main project language file for this project (Seanpm2001/Learn-GN) as GN is the language this project is dedicated to, because this project is about learning the GN programming language. It only makes sense to GN the official language for this project. It is getting its own project language file, starting here.

# File info
# File type: Google GN source file (*.gn)
# File version: 1 (2022, Saturday, October 1st at 10:59 pm PST)
# Line count (including blank lines and compiler line): 20

# End of script
