# Start of script

project('Project language file 1', meson_version: '>=0.62.0')
message('Project language file 1\nFor: SNU/2D/ProgrammingTools/IDE/Meson\nAbout:\nI decided to make Meson the main project language file for this project (SNU / 2D / Programming Tools / IDE / Meson) as this is a Meson IDE, and it needs its main language to be represented here.\n')

# Output:

# Project language file 1
# For: SNU/2D/ProgrammingTools/IDE/Meson
# About:
# I decided to make Meson the main project language file for this project (SNU / 2D / Programming Tools / IDE / Meson) as this is a Meson IDE, and it needs its main language to be represented here.

# File info
# File type: Meson source file (*.build)
# File version: 1 (2022, Friday, September 2nd at 5:56 pm PST)
# Line count (including blank lines and compiler line): 19

# End of script
